force-app/main/default/objects/CB_Customer_Created__e/CB_Customer_Created__e.object-meta.xml
<CustomObject>
    <label>CB Customer Created</label>
    <pluralLabel>CB Customer Created</pluralLabel>
</CustomObject>