force-app/main/default/objects/CB_Customer_Created__e/fields/Account_Ids__c.field-meta.xml
<CustomField>
    <fullName>Account_Ids__c</fullName>
    <label>Account Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>