force-app/main/default/objects/CB_Customer_Created__e/fields/CB_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>CB_Subscription_Id__c</fullName>
    <label>CB Subscription Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>